--- a/src/assets/i18n/jp.json
+++ b/src/assets/i18n/jp.json
@@ -1,29 +1,23 @@
 {
 	"En": "",
+	"DECENTRALIZED EXCHANGE": "",
+	"JOIN THE TRADING REVOLUTION": "",
 	"Whitepaper": "",
 	"Join Token Sale": "",
+	"Visit Exchange": "",
+	"Partners": "",
+	"Cn": "",
+	"Home": "",
 	"About Us": "",
 	"Token Sale": "",
 	"Schedule": "",
-	"Cn": "",
-	"Advisors": "",
-	"Partners": "",
-	"Register": "",
-	"Visit Exchange": "",
-	"Home": "",
 	"Team": "",
-	"As an open, multilateral trading platform that supports ERC20 tokens and smart contracts": {
-		" It is a decentralized trading platform that does not involve any centralized exchange or traditional asset management methodology": {
-			"0": ""
-		}
-	},
-	"We have positioned this platform as a future standard and an industry infrastructure that features the next generation of digital asset exchange": {
-		"0": ""
-	},
+	"Advisors": "",
+	"Register": "",
 	"Diversity": "",
 	"High number of coin selections": "",
 	"Decentralization": "",
-	"Distributed transactions, globally none geographic restrictions": "",
+	"distributed transactions, globally none geographic restrictions": "",
 	"Unlock KYC": "",
 	"No registration and no complicated KYC process": "",
 	"Trust": "",
@@ -37,11 +31,13 @@
 	"Total Supply of Tokens": "",
 	"Token Sale Hard Cap": "",
 	"Rate": "",
-	"Individual Min Eth": "",
 	"Currencies Accepted": "",
 	"Token Distribution": "",
 	"Use of Process": "",
-	"New EtherDelta 2": {
+	"System Development & Operation (35%)": "",
+	"Marketing & Promotion (50%)": "",
+	"Emergency Fund (15%)": "",
+	"EtherDelta 2": {
 		"0": ""
 	},
 	"Mobile Platform": "",
@@ -54,9 +50,10 @@
 	"Next Generation wallet with embeded coin exchange feature": "",
 	"Mobile app user interface(UI) enhancement": "",
 	"Team & Talent expanding": "",
-	"New decentralized ICO platform released": "",
+	"New decentralized TGE platform released": "",
 	"Increase the value of the wallet": "",
-	"An all star team with experts in blockchain, technology, legal, finance, marketing, and design": {
+	"The star team with experts in blockchain, technology, legal, finance and marketing": {
 		"0": ""
-	}
+	},
+	"Strong aivosr team in block chain world": ""
 }
