--- a/src/assets/i18n/cn.json
+++ b/src/assets/i18n/cn.json
@@ -9,7 +9,7 @@
     "Advisors": "顾问团队",
     "Partners": "合作伙伴",
     "Register": "注册",
-    "Visit Exchange": "訪问交易所",
+    "Visit Exchange": "访问交易所",
     "Home": "主页",
     "Team": "团队",
     "As an open, multilateral trading platform that supports ERC20 tokens and smart contracts": {
