--- a/src/assets/i18n/jp.json
+++ b/src/assets/i18n/jp.json
@@ -1,62 +1,63 @@
 {
-	"En": "",
-	"Whitepaper": "",
-	"Join Token Sale": "",
-	"About Us": "",
-	"Token Sale": "",
-	"Schedule": "",
-	"Cn": "",
-	"Advisors": "",
-	"Partners": "",
-	"Register": "",
-	"Visit Exchange": "",
-	"Home": "",
-	"Team": "",
+	"About Us": "About Us",
+	"Advisors": "Advisors",
+	"All star team with experts in blockchain, technology, legal, finance and marketing": {
+		"0": ""
+	},
 	"As an open, multilateral trading platform that supports ERC20 tokens and smart contracts": {
-		" It is a decentralized trading platform that does not involve any centralized exchange or traditional asset management methodology": {
-			"0": ""
-		}
-	},
-	"We have positioned this platform as a future standard and an industry infrastructure that features the next generation of digital asset exchange": {
 		"0": ""
 	},
-	"Diversity": "",
-	"High number of coin selections": "",
-	"Decentralization": "",
-	"Distributed transactions, globally none geographic restrictions": "",
-	"Unlock KYC": "",
-	"No registration and no complicated KYC process": "",
-	"Trust": "",
-	"Low trust and operational costs": "",
-	"Secure": "",
-	"Multiple layer to secure the transaction": "",
-	"Impartial": "",
-	"High degree of transparency, fairness, integrity": "",
-	"Watch Video": "",
-	"Tokens Sale": "",
-	"Total Supply of Tokens": "",
-	"Token Sale Hard Cap": "",
-	"Rate": "",
-	"Individual Min Eth": "",
-	"Currencies Accepted": "",
-	"Token Distribution": "",
-	"Use of Process": "",
-	"New EtherDelta 2": {
+	"Bitcoin Transaction": "Bitcoin Transaction",
+	"Cn": "中",
+	"Currencies Accepted": "Currencies Accepted",
+	"DECENTRALIZED EXCHANGE": "",
+	"Decentralization": "Decentralization",
+	"Development new generation exchnage on virable of platform inlcuding IOS and Android": "Development new generation exchnage on virable of platform inlcuding IOS and Android",
+	"Distributed transactions, globally none geographic restrictions": "Distributed transactions, globally none geographic restrictions",
+	"Diversity": "Diversity",
+	"Emergency Fund (15%)": "Emergency Fund (15%)",
+	"En": "EN",
+	"EtherDelta 2": {
+		"0": "EtherDelta 2"
+	},
+	"EtherDelta Lab 51": "EtherDelta Lab 51",
+	"EtherDelta exchange will support bitcoin transaction and related service": "EtherDelta exchange will support bitcoin transaction and related service",
+	"EtherDelta will lanuch Lab 51 to incubate new inovation in finiance, technology, security and etc": "EtherDelta will lanuch Lab 51 to incubate new inovation in finiance, technology, security and etc",
+	"High degree of transparency, fairness, integrity": "High degree of transparency, fairness, integrity",
+	"High number of coin selections": "High number of coin selections",
+	"Home": "Home",
+	"Impartial": "Impartial",
+	"Increase the value of the wallet": "Increase the value of the wallet",
+	"It is a decentralized trading platform that does not involve any centralized exchange or traditional asset management methodology": {
 		"0": ""
 	},
-	"Mobile Platform": "",
-	"Development new generation exchnage on virable of platform inlcuding IOS and Android": "",
-	"Bitcoin Transaction": "",
-	"EtherDelta exchange will support bitcoin transaction and related service": "",
-	"EtherDelta Lab 51": "",
-	"EtherDelta will lanuch Lab 51 to incubate new inovation in finiance, technology, security and etc": "",
-	"New Wallet": "",
-	"Next Generation wallet with embeded coin exchange feature": "",
-	"Mobile app user interface(UI) enhancement": "",
-	"Team & Talent expanding": "",
-	"New decentralized ICO platform released": "",
-	"Increase the value of the wallet": "",
-	"An all star team with experts in blockchain, technology, legal, finance, marketing, and design": {
-		"0": ""
-	}
+	"JOIN THE TRADING REVOLUTION": "JOIN THE TRADING REVOLUTION",
+	"Low trust and operational costs": "Low trust and operational costs",
+	"Marketing & Promotion (50%)": "Marketing & Promotion (50%)",
+	"Mobile Platform": "Mobile Platform",
+	"Mobile app user interface(UI) enhancement": "Mobile app user interface(UI) enhancement",
+	"Multiple layer to secure the transaction": "Multiple layer to secure the transaction",
+	"New Wallet": "New Wallet",
+	"New decentralized TGE platform released": "",
+	"Next Generation wallet with embeded coin exchange feature": "Next Generation wallet with embeded coin exchange feature",
+	"No registration and no complicated KYC process": "No registration and no complicated KYC process",
+	"Partners": "Partners",
+	"Rate": "Rate",
+	"Schedule": "Schedule",
+	"Secure": "Secure",
+	"Strong advisor team in blockchain world": "Strong advisor team in blockchain world",
+	"System Development & Operation (35%)": "System Development & Operation (35%)",
+	"Team": "Team",
+	"Team & Talent expanding": "Team & Talent expanding",
+	"Token Distribution": "Token Distribution",
+	"Token Sale": "Token Sale",
+	"Token Sale Hard Cap": "oken Sale Hard Cap",
+	"Tokens Sale": "Tokens Sale",
+	"Total Supply of Tokens": "Total Supply of Tokens",
+	"Trust": "Trust",
+	"Unlock KYC": "nlock KYC",
+	"Use of Process": "se of Process",
+	"Visit Exchange": "Visit Exchange",
+	"download Whitepaper": "download Whitepaper",
+	"partners": "partners"
 }
