Translation for en, cn completed

--- a/src/assets/i18n/cn.json
+++ b/src/assets/i18n/cn.json
@@ -1,63 +1,59 @@
 {
-	"About Us": "关于我们",
-	"Advisors": "顾问团队",
-	"All star team with experts in blockchain, technology, legal, finance and marketing": {
-		"0": ""
-	},
-	"As an open, multilateral trading platform that supports ERC20 tokens and smart contracts": {
-		"0": ""
-	},
-	"Bitcoin Transaction": "比特币交易",
-	"Cn": "中",
-	"Currencies Accepted": "接受货币",
-	"DECENTRALIZED EXCHANGE": "去中心化交易所",
-	"Decentralization": "去中心化",
-	"Development new generation exchnage on virable of platform inlcuding IOS and Android": "开发新一代IOS平台和Android平台",
-	"Distributed transactions, globally none geographic restrictions": "分布式交易，全球无地域限制",
-	"Diversity": "多样性",
-	"Emergency Fund (15%)": "",
-	"En": "英",
-	"EtherDelta 2": {
-		"0": "以德 2.0"
-	},
-	"EtherDelta Lab 51": "以德实验室 51",
-	"EtherDelta exchange will support bitcoin transaction and related service": "以徳交换将支持比特币交易和相关服务",
-	"EtherDelta will lanuch Lab 51 to incubate new inovation in finiance, technology, security and etc": "therDelta将启动实验室51孵化在合作，技术，安全等新的创新",
-	"High degree of transparency, fairness, integrity": "高度透明，公平，诚信",
-	"High number of coin selections": "硬币选择次数多",
-	"Home": "主页",
-	"Impartial": "公正",
-	"Increase the value of the wallet": "增加钱包的价值",
-	"It is a decentralized trading platform that does not involve any centralized exchange or traditional asset management methodology": {
-		"0": ""
-	},
-	"JOIN THE TRADING REVOLUTION": "和我們一起掀起一場經濟革命",
-	"Low trust and operational costs": "沒需信用等級验证, 低运营成本",
-	"Marketing & Promotion (50%)": "",
-	"Mobile Platform": "手机平台",
-	"Mobile app user interface(UI) enhancement": "新版手机平台应用界面（UI)",
-	"Multiple layer to secure the transaction": "多层保证交易",
-	"New Wallet": "新钱包",
-	"New decentralized TGE platform released": "新的分散式TGE平台发布",
-	"Next Generation wallet with embeded coin exchange feature": "下一代嵌入式硬币兑换功能的钱包",
-	"No registration and no complicated KYC process": "沒需注册，没有复杂的KYC程序",
-	"Partners": "合作伙伴",
-	"Rate": "比例",
-	"Schedule": "里程碑",
-	"Secure": "安全",
-	"Strong advisor team in blockchain world": "",
-	"System Development & Operation (35%)": "系统开发与运营（35％",
-	"Team": "团队",
-	"Team & Talent expanding": "团队和人才拓展",
-	"Token Distribution": "Token分配",
-	"Token Sale": "Token销售",
-	"Token Sale Hard Cap": "Token Sale Hard Cap",
-	"Tokens Sale": "Tokens 銷售",
-	"Total Supply of Tokens": "Tokens 总供应量",
-	"Trust": "信任",
-	"Unlock KYC": "解锁KYC",
-	"Use of Process": "使用分配",
-	"Visit Exchange": "访问交易所",
-	"download Whitepaper": "download Whitepapaer",
-	"partners": "partners"
+    "About Us": "关于我们",
+    "Advisors": "顾问团队",
+    "All star team with experts in blockchain & technology & finance and marketing.": "全明星团队拥有区块链，技术，法律，金融和市场营销专家",
+
+    "As an open & multilateral trading platform that supports ERC20 tokens and smart contracts.": "作為支持ERC20代幣和智能合約的開放式和多邊交易平台",
+    "It is a decentralized trading platform that does not involve any centralized exchange or traditional asset management methodology.": "這是一個分散的交易平台， 不涉及任何集中交易或傳統的資產管理方法.",
+    "We have positioned this platform as a future standard and an industry infrastruture that features the next generation of digital asset exhange.": "我們已經把這個平台定位為未來的標準，以及以下一代數字資產擴展為特徵的行業基礎架構.",
+    "Bitcoin Transaction": "比特币交易",
+    "Currencies Accepted": "接受货币",
+    "DECENTRALIZED EXCHANGE": "去中心化交易所",
+    "Decentralization": "去中心化",
+    "Development new generation exchnage on virable of platform inlcuding IOS and Android": "开发新一代IOS平台和Android平台",
+    "Distributed transactions, globally none geographic restrictions": "分布式交易，全球无地域限制",
+    "Diversity": "多样性",
+    "Emergency Fund (15%)": "紧急基金 (15%)",
+    "EtherDelta 2": {
+        "0": "以德 2.0"
+    },
+    "EtherDelta Lab 51": "以德实验室 51",
+    "EtherDelta exchange will support bitcoin transaction and related service": "以徳交换将支持比特币交易和相关服务",
+    "EtherDelta will lanuch Lab 51 to incubate new inovation in finiance, technology, security and etc": "therDelta将启动实验室51孵化在合作，技术，安全等新的创新",
+    "High degree of transparency, fairness, integrity": "高度透明，公平，诚信",
+    "High number of coin selections": "硬币选择多样化",
+    "Home": "主页",
+    "Impartial": "公正",
+    "Increase the value of the wallet": "增加钱包的价值",
+    "Language": "语言 ",
+    "Low trust and operational costs": "沒需信用等級验证, 低运营成本",
+    "Marketing & Promotion (50%)": "营销与推广（50％)",
+    "Mobile Platform": "手机平台",
+    "Mobile app user interface(UI) enhancement": "新版手机平台应用界面（UI)",
+    "Multiple layer to secure the transaction": "多层保证交易",
+    "New Wallet": "新钱包",
+    "New decentralized TGE platform released": "新的分散式TGE平台发布",
+    "Next Generation wallet with embeded coin exchange feature": "下一代嵌入式硬币兑换功能的钱包",
+    "No registration and no complicated KYC process": "沒需注册，没有复杂的KYC程序",
+    "Partners": "合作伙伴",
+    "Rate": "比例",
+    "Schedule": "里程碑",
+    "Secure": "安全",
+    "Strong advisor team in blockchain world": "强大的区块链世界顾问团队",
+    "System Development & Operation (35%)": "系统开发与运营（35％)",
+    "Team": "团队",
+    "Team & Talent expanding": "团队和人才拓展",
+    "Token Distribution": "代币分配",
+    "Token Generation Event Start In": "代币銷售倒计时",
+    "Token Sale": "代币销售",
+    "Token Sale Hard Cap": "Token Sale Hard Cap",
+    "Total Supply of Tokens": "代币总供应量",
+    "Trust": "信任",
+    "Unlock KYC": "解锁KYC",
+    "Use of Process": "使用分配",
+    "Visit Exchange": "访问交易所",
+    "We have positioned this platform as a future standard and an industry infrastructure that features the next generation of digital asset exchange": {
+        "0": "我们已经把这个平台定位为未来的标准和一个以下一代数字资产交换为特征的行业基础设施"
+    },
+    "Whitepaper": "白皮书下载"
 }
