--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -3,23 +3,23 @@
     "Advisors": "Advisors",
     "All star team with experts in blockchain & technology & finance and marketing.": "All star team with experts in blockchain, technology, legal, finance and marketing",
 
-    "As an open & multilateral trading platform that supports ERC20 tokens and smart contracts.": "As an open & multilateral trading platform that supports ERC20 tokens and smart contracts.",
-    "It is a decentralized trading platform that does not involve any centralized exchange or traditional asset management methodology.": "It is a decentralized trading platform that does not involve any centralized exchange or traditional asset management methodology.",
-    "We have positioned this platform as a future standard and an industry infrastruture that features the next generation of digital asset exhange.": "We have positioned this platform as a future standard and an industry infrastruture that features the next generation of digital asset exhange.",
+    "As an open & multilateral trading platform that supports ERC20 tokens and smart contracts.": "EtherDelta is an open & multilateral trading platform that supports ERC20 tokens and smart contracts.",
+    "It is a decentralized trading platform that does not involve any centralized exchange or traditional asset management methodology.": "The decentralized trading platform does not involve any centralized exchange or traditional asset management methodology.",
+    "We have positioned this platform as a future standard and an industry infrastruture that features the next generation of digital asset exhange.": "We have positioned this platform as a future standard and an industry infrastructure that features the next generation of digital asset exchange.",
     "Bitcoin Transaction": "Bitcoin Transaction",
     "Currencies Accepted": "Currencies Accepted",
     "DECENTRALIZED EXCHANGE": "DECENTRALIZED EXCHANGE",
     "Decentralization": "Decentralization",
-    "Development new generation exchnage on virable of platform inlcuding IOS and Android": "Development new generation exchnage on virable of platform inlcuding IOS and Android",
+    "Development new generation exchange multiple of platform including IOS and Android": "Development new generation exchange multiple of platform including IOS and Android",
     "Distributed transactions, globally none geographic restrictions": "Distributed transactions, globally none geographic restrictions",
     "Diversity": "Diversity",
     "Emergency Fund (15%)": "Emergency Fund (15%)",
     "EtherDelta 2": {
-        "0": "EtherDelta 2"
+        "0": "EtherDelta 2.0"
     },
     "EtherDelta Lab 51": "EtherDelta Lab 51",
     "EtherDelta exchange will support bitcoin transaction and related service": "EtherDelta exchange will support bitcoin transaction and related service",
-    "EtherDelta will lanuch Lab 51 to incubate new inovation in finiance, technology, security and etc": "EtherDelta will lanuch Lab 51 to incubate new inovation in finiance, technology, security and etc",
+    "EtherDelta will launch Lab 51 to incubate new innovation in finiance, technology and security": "EtherDelta will launch Lab 51 to incubate new innovation in finance, technology, security and etc",
     "High degree of transparency, fairness, integrity": "High degree of transparency, fairness, integrity",
     "High number of coin selections": "High number of coin selections",
     "Home": "Home",
@@ -33,27 +33,31 @@
     "Multiple layer to secure the transaction": "Multiple layer to secure the transaction",
     "New Wallet": "New Wallet",
     "New decentralized TGE platform released": "New decentralized TGE platform released",
-    "Next Generation wallet with embeded coin exchange feature": "Next Generation wallet with embeded coin exchange feature",
+    "Next Generation wallet with embeded coin exchange feature": "Next Generation wallet with coin exchange feature",
     "No registration and no complicated KYC process": "No registration and no complicated KYC process",
     "Partners": "Partners",
     "Rate": "Rate",
     "Schedule": "Schedule",
     "Secure": "Secure",
-    "Strong advisor team in blockchain world": "Strong advisor team in blockchain world",
+    "Strong advisor team in blockchain world": "Advisors with strong background",
     "System Development & Operation (35%)": "System Development & Operation (35%)",
     "Team": "Team",
     "Team & Talent expanding": "Team & Talent expanding",
     "Token Distribution": "Token Distribution",
     "Token Generation Event Start In": "Token Generation Event Start In",
     "Token Sale": "Token Sale",
-    "Token Sale Hard Cap": "oken Sale Hard Cap",
+    "Token Sale Hard Cap": "Token Sale Hard Cap",
     "Total Supply of Tokens": "Total Supply of Tokens",
     "Trust": "Trust",
-    "Unlock KYC": "nlock KYC",
+    "Unlock KYC": "Unlock KYC",
     "Use of Process": "Use of Process",
     "Visit Exchange": "Visit Exchange",
-    "We have positioned this platform as a future standard and an industry infrastructure that features the next generation of digital asset exchange": {
+    "aaaaaa": {
         "0": "We have positioned this platform as a future standard and an industry infrastructure that features the next generation of digital asset exchange"
     },
-    "Whitepaper": "Whitepaper"
+    "Whitepaper": "Whitepaper",
+    "150,000,000 Team Reserved 1 year (10%)":"150,000,000 Team Reserved 1 year (10%)",
+    "600,000,000 Private-Sale (40%)":"600,000,000 Private-Sale (40%)",
+    "750,000,000 Token Generation Event (50%)":"750,000,000 Token Generation Event (50%)"
+
 }
