--- a/src/assets/i18n/cn.json
+++ b/src/assets/i18n/cn.json
@@ -5,7 +5,7 @@
 
     "As an open & multilateral trading platform that supports ERC20 tokens and smart contracts.": "以德是支持ERC20代币和智能合约的开放式多方交易平台",
     "It is a decentralized trading platform that does not involve any centralized exchange or traditional asset management methodology.": "作为一个去中心化的交易平台， 以德无需中心化交易和传统的资产管理方法.",
-    "It is a decentralized trading platform that does not involve any centralize": "我们将以德定位为支持下一代资产交易的全新业界标准.",
+    "It is a decentralized trading platform that does not involve any centralize": "我们将以德定位为支持下一代资产交易的全新业界标准.以德过去90天内完成了$3.4亿美金的成交量，返回了$1.1百万美金的净利润，过去30天内完成了$1.22亿美金的交易量，返回了$0.38百万美元的净利润",
     "Bitcoin Transaction": "比特币交易",
     "Currencies Accepted": "接受币种",
     "DECENTRALIZED EXCHANGE": "去中心化交易所",
