--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -5,7 +5,7 @@
 
     "As an open & multilateral trading platform that supports ERC20 tokens and smart contracts.": "EtherDelta is an open & multilateral trading platform that supports ERC20 tokens and smart contracts.",
     "It is a decentralized trading platform that does not involve any centralized exchange or traditional asset management methodology.": "The decentralized trading platform does not involve any centralized exchange or traditional asset management methodology.",
-    "It is a decentralized trading platform that does not involve any centralize": "We have positioned this platform as a future standard and an industry infrastructure that features the next generation of digital asset exchange.",
+    "It is a decentralized trading platform that does not involve any centralize": "We have positioned this platform as a future standard and an industry infrastructure that features the next generation of digital asset exchange. Etherdelta.com has completed over 340 Million USD worth of transactions in the past 90 days and resulted in 1.1 Million USD net profit.",
     "Bitcoin Transaction": "Bitcoin Transaction",
     "Currencies Accepted": "Currencies Accepted",
     "DECENTRALIZED EXCHANGE": "DECENTRALIZED EXCHANGE",
