--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -30,7 +30,7 @@
     "Marketing & Promotion (50%)": "Marketing & Promotion (50%)",
     "Mobile Platform": "Mobile Platform",
     "Mobile app user interface(UI) enhancement": "Mobile app user interface(UI) enhancement",
-    "Multiple layer to secure the transaction": "Multiple layer to secure the transaction",
+    "Multiple layer to secure the transaction": "Multiple layers to secure the transaction",
     "New Wallet": "New Wallet",
     "New decentralized TGE platform released": "New decentralized TGE platform released",
     "Next Generation wallet with embeded coin exchange feature": "Next Generation wallet with coin exchange feature",
