--- a/src/assets/i18n/cn.json
+++ b/src/assets/i18n/cn.json
@@ -26,7 +26,7 @@
     "Impartial": "公正",
     "Increase the value of the wallet": "全新以德钱包上线",
     "Language": "语言 ",
-    "Low trust and operational costs": "无需信用等级验证, 低运营成本",
+    "Low credit and operational costs": "无需信用等级验证, 低运营成本",
     "Marketing & Promotion (50%)": "营销与推广（50％)",
     "Mobile Platform": "手机平台",
     "Mobile app user interface(UI) enhancement": "新版手机平台应用和网络版升级",
@@ -56,7 +56,7 @@
         "0": "我们把以德定位为下一代数字资产交换为的行业标准"
     },
     "Whitepaper": "白皮书下载",
-    "150,000,000 Team Reserved 1 year (10%)":"150,000,000 团队预留一年 （10%）",
-    "600,000,000 Private-Sale (40%)":"600,000,000 私募（40%）",
-    "750,000,000 Token Generation Event (50%)":"750,000,000 令牌销售 （50%）"
+    "150,000,000 Team Reserved 1 year (10%)": "150,000,000 团队预留一年 （10%）",
+    "600,000,000 Private-Sale (40%)": "600,000,000 私募（40%）",
+    "750,000,000 Token Generation Event (50%)": "750,000,000 令牌销售 （50%）"
 }
