--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -26,7 +26,7 @@
     "Impartial": "Impartial",
     "Increase the value of the wallet": "Increase the value of the wallet",
     "Language": "",
-    "Low trust and operational costs": "Low trust and operational costs",
+    "Low credit and operational costs": "Low credit and operational costs",
     "Marketing & Promotion (50%)": "Marketing & Promotion (50%)",
     "Mobile Platform": "Mobile Platform",
     "Mobile app user interface(UI) enhancement": "Mobile app user interface(UI) enhancement",
@@ -56,8 +56,8 @@
         "0": "We have positioned this platform as a future standard and an industry infrastructure that features the next generation of digital asset exchange"
     },
     "Whitepaper": "Whitepaper",
-    "150,000,000 Team Reserved 1 year (10%)":"150,000,000 Team Reserved 1 year (10%)",
-    "600,000,000 Private-Sale (40%)":"600,000,000 Private-Sale (40%)",
-    "750,000,000 Token Generation Event (50%)":"750,000,000 Token Generation Event (50%)"
+    "150,000,000 Team Reserved 1 year (10%)": "150,000,000 Team Reserved 1 year (10%)",
+    "600,000,000 Private-Sale (40%)": "600,000,000 Private-Sale (40%)",
+    "750,000,000 Token Generation Event (50%)": "750,000,000 Token Generation Event (50%)"
 
 }
