--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -58,6 +58,21 @@
     "Whitepaper": "Whitepaper",
     "150,000,000 Team Reserved 1 year (10%)": "150,000,000 Team Reserved 1 year (10%)",
     "600,000,000 Private-Sale (40%)": "600,000,000 Private-Sale (40%)",
-    "750,000,000 Token Generation Event (50%)": "750,000,000 Token Generation Event (50%)"
+    "750,000,000 Token Generation Event (50%)": "750,000,000 Token Generation Event (50%)",
+    "Founder of Wenyue Capital": "",
+    "Co-founder of Oceanrise trading group": "",
+    "Professional knowledge of computer science and blockchain investment, as well as entrepreneurs in international trade, investment, consulting, PR and other backgrounds.": "",
+    "MMU economics": "",
+    "Britain CMC foreign exchange trading center working experience. Possesses extensive experience in blockchain technology.": "",
+    "Director of River stone capital project": "",
+    "BVast experience in the finance industry, years of experience in customer development and investment maintenance and financial management.": "",
+    "Director of golden bull finance": "",
+    "Founder of WWW.ICO.COM": "",
+    "Founder of BLOCKCHAIN FINANCIAL SERVICE LTD (BFS)": "",
+    "Founder of Zenith Ventures blockchain": "",
+    "Founder & CEO of 1ST Blood": "",
+    "Advisor of Lampix": "",
+    "Partner of NewBlock Capital": "",
+    "": ""
 
 }
