--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -61,11 +61,11 @@
     "750,000,000 Token Generation Event (50%)": "750,000,000 Token Generation Event (50%)",
     "Founder of Wenyue Capital": "Founder of Wenyue Capital",
     "Co-founder of Oceanrise trading group": "Co-founder of Oceanrise trading group",
-    "Professional knowledge of computer science and blockchain investment, as well as entrepreneurs in international trade, investment, consulting, PR and other backgrounds.": "Professional knowledge of computer science and blockchain investment, as well as entrepreneurs in international trade, investment, consulting, PR and other backgrounds.",
+    "Professional knowledge of computer science and blockchain investment, entrepreneurs in international trade, investment, consulting, PR and other backgrounds.": "Professional knowledge of computer science and blockchain investment, entrepreneurs in international trade, investment, consulting, PR and other backgrounds.",
     "MMU economics": "MMU economics",
     "Britain CMC foreign exchange trading center working experience. Possesses extensive experience in blockchain technology.": "Britain CMC foreign exchange trading center working experience. Possesses extensive experience in blockchain technology.",
     "Director of River stone capital project": "Director of River stone capital project",
-    "BVast experience in the finance industry, years of experience in customer development and investment maintenance and financial management.": "BVast experience in the finance industry, years of experience in customer development and investment maintenance and financial management.",
+    "Experience in the finance industry, years of experience in customer development and investment maintenance and financial management.": "BVast experience in the finance industry, years of experience in customer development and investment maintenance and financial management.",
     "Director of golden bull finance": "Director of golden bull finance",
     "Founder of WWW.ICO.COM": "Founder of WWW.ICO.COM",
     "Founder of BLOCKCHAIN FINANCIAL SERVICE LTD (BFS)": "Founder of BLOCKCHAIN FINANCIAL SERVICE LTD (BFS)",
