--- a/src/assets/i18n/cn.json
+++ b/src/assets/i18n/cn.json
@@ -68,13 +68,13 @@
   "Director of golden bull finance": "Director of golden bull finance",
   "Founder of WWW.ICO.COM": "WWW.ICO.COM创始人",
   "Founder of BLOCKCHAIN FINANCIAL SERVICE LTD (BFS)": "区块链金融服务(BFS)创始人",
-  "Founder of Zenith Ventures blockchain": "Zenith Ventures blockchain创始人",
+  "Founder of Zenith Ventures blockchain": "Zenith Ventures创始人",
   "Founder & CEO of 1ST Blood": "一血创始人兼CEO",
   "Advisor of Lampix": "Lampix顾问",
   "Partner of NewBlock Capital": "NewBlock Capital合伙人",
   "Chief marketing advisor": "首席市场顾问",
   "Chief marketing advisor": "首席项目顾问",
-  "Token Generation Event Ends In": "加入令牌销售倒计时",
+  "Token Generation Event End In": "加入令牌销售倒计时",
   "Join Token Sale": "加入令牌销售",
   "Director of golden bull finance": "金牛财经主任"
 }
