--- a/src/assets/i18n/cn.json
+++ b/src/assets/i18n/cn.json
@@ -74,7 +74,7 @@
   "Partner of NewBlock Capital": "NewBlock Capital合伙人",
   "Chief marketing advisor": "首席市场顾问",
   "Chief marketing advisor": "首席项目顾问",
-  "Token Generation Event End In": "加入令牌销售倒计时",
+  "Token Generation Event Ends In": "加入令牌销售倒计时",
   "Join Token Sale": "加入令牌销售",
   "Director of golden bull finance": "金牛财经主任"
 }
