--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -72,7 +72,7 @@
     "Founder of Zenith Ventures blockchain": "Founder of Zenith Ventures blockchain",
     "Founder & CEO of 1ST Blood": "Founder & CEO of 1ST Blood",
     "Advisor of Lampix": "Advisor of Lampix",
-    "Partner of NewBlock Capital": "artner of NewBlock Capital",
+    "Partner of NewBlock Capital": "Partner of NewBlock Capital",
     "": ""
 
 }
